--- a/source/localisation/aow_l_english.yml
+++ b/source/localisation/aow_l_english.yml
@@ -3,8 +3,8 @@
  NO_LOCAL_AUTONOMY_EFFECTS:0 "$NAME$には、現在の自治率の効果はありません。"
  LOCAL_AUTONOMY_DECREASE_EFFECT:0 "$NAME$が§Y0.0%§!の不穏度を持つ場合、自治率を減少させることができる。\n\n"
  LOCAL_AUTO_CHANGE:0 "現在の推定では、以下の要因により毎月$DECREASE$変動します：\n$DESC$"
- LOCAL_AUTONOMY_MOD:0 "月毎の自治率の変動"
- GLOBAL_AUTONOMY_MOD:0 "月毎の自治率の変動"
+ LOCAL_AUTONOMY_MOD:0 "月間自治率変動"
+ GLOBAL_AUTONOMY_MOD:0 "月間自治率変動"
  autonomy_increased:0 "自治率の増加"
  desc_autonomy_increased:0 "この州は高い自治率が付与されており、この地域の緊張を緩和しています。"
  autonomy_decreased:0 "自治率の減少"
@@ -444,7 +444,7 @@
  LIBERTY_DESIRE_FROM_ANNNEXATION:0 "併合されている：$VAL$"
  LIBERTY_DESIRE_FROM_DIPLO_TECH:0 "$OVERLORD$より優れた外交技術：$VAL$"
  LIBERTY_DESIRE_NEGATIVE_PRESTIGE:0 "§Y$OVERLORD$§!の威信がマイナス：$VAL$"
- LIBERTY_DESIRE_MONTHLY:0 "毎月変更：$VAL$"
+ LIBERTY_DESIRE_MONTHLY:0 "毎月の変更：$VAL$"
  TRADEPOWERBONUS_FROM:0 "$FROM$からの送出：$VAL$\n"
  TRADEPOWERBONUS_NONE:0 "$WHERE$で商人が回収しているため転送ボーナスはありません。"
  SUBJECT_WARGOAL:0 "これは$WHOS$の戦争の目標で、我々が使用できます。"
