--- a/source/localisation/cradle_of_civilization_l_english.yml
+++ b/source/localisation/cradle_of_civilization_l_english.yml
@@ -164,7 +164,7 @@
  low_army_professionalism:0 "軍熟練度"
  high_army_professionalism:0 "軍熟練度"
  ARMY_PROFESSIONALISM_DESC:1 "軍熟練度は常備軍と傭兵によって変動します。常備軍の訓練、将軍の雇用で増加、傭兵の雇用で減少します。"
- ARMY_PROFESSIONALISM_ICON_TIP:1 "$TITLE|Y$\n§Y軍熟練度§!は現在$VAL|Y%0$で、以下の効果を得ます：\n$MOD$"
+ ARMY_PROFESSIONALISM_ICON_TIP:1 "$TITLE|Y$\n§Y軍熟練度§!は現在$VAL|Y%0$で、効果は以下の通り：\n$MOD$"
  ARMY_PROFESSIONALISM_TITLE:0 "§Y軍熟練度§!"
  COMPACT_BATTLE_RESULT_LOSSES:0 "損失：$NUMBER$"
  COMPACT_BATTLE_RESULT_LOSSES_TOOLTIP:0 "歩兵：$INFANTRY|Y$\n騎兵：$CAVALRY|Y$\n砲兵：$ARTILLERY|Y$"
@@ -441,7 +441,7 @@
  outsiders_cleared_our_merchants:0 "盗賊行為の阻止"
  desc_outsiders_cleared_our_merchants:0 "地域の外国商人は、この州の盗賊の削減により強化されている。"
  merchants_hampered_by_bandits:0 "盗賊に妨害された商人"
- local_merchants_outcompeted:0 "地方の商人は打ち負かされた"
+ local_merchants_outcompeted:0 "在地商人は打ち負かされた"
  desc_local_merchants_outcompeted:0 "この州の地方商人は、ここの都市で事業を支配するようになった外国人の競争相手となっている。以前より多くの商品が作られているが、利益の多くは外国人の手に落ちている。"
  protectionism:0 "保護主義"
  local_protectionism:0 "地方保護主義"
@@ -579,7 +579,7 @@
  INVITE_SCHOLAR_INSTANT_TOOLTIP:0 "§Y学者を招聘§!"
  INVITE_SCHOLAR_DELAYED_TOOLTIP:1 "他国から学者を招聘することで20年間ボーナスを与える。"
  UNIQUE_TRADING_POLICY_ALREADY_ACTIVE:0 "§Rこの交易政策は、このノードの一つの国に対してのみ有効であり、すでに§!$BY|Y$§Rによって選択されています。§!"
- ARMY_PROFESSIONALISM_YEARLY_MODIFIERS_DESC:0 "§Y年間獲得：§!\n$MODIFIER$"
+ ARMY_PROFESSIONALISM_YEARLY_MODIFIERS_DESC:0 "§Y毎年の獲得：§!\n$MODIFIER$"
  ARMY_PROFESSIONALISM_STATIC_MODIFIERS_DESC:1 "§Y即時に獲得：§!\n将軍の雇用：§G+1%§!\n傭兵の雇用：§R-5%§!"
  unruly_tribes:0 "手に負えない部族たち"
  desc_unruly_tribes:0 "この地域の地方の部族は、支配者を支援する行動が彼らへの好遇によって報いられていないことに不満を抱いている。"
