--- a/source/localisation/decisions_l_english.yml
+++ b/source/localisation/decisions_l_english.yml
@@ -102,7 +102,7 @@
  pagan_conversion_to_judaism_title:0 "ユダヤ教に改宗"
  pagan_conversion_to_judaism_desc:0 "我が国のユダヤ人コミュニティはユダヤ教を広く布教している。"
  pagan_conversion_to_judaism_tooltip:0 "[Root.GetName]は、新しい国教として、彼らの国民によって実践されているユダヤ教の信仰を採用する。"
- abolished_slavery_act_tooltip:0 "[Root.GetName]が領有する州は奴隷を生産しなくなります。"
+ abolished_slavery_act_tooltip:0 "[Root.GetName]が領有する州はすべて、奴隷を生産しなくなります。"
  forming_spain_diplomatically_tooltip:0 "[Root.GetName]はカスティーリャとアラゴン双方の同君連合君主、または、属国として他方を支配している"
  tatar_nation_title:0 "キプチャクの再建"
  tatar_nation_desc:0 "何世紀も前、偉大なる父は我々の祖先たちを古代の祖国で統一した。彼は息子を残して死亡し、強大な帝国は小さく、弱く、遺産に値しない取るに足らない領地に分割されてしまった！バラバラになった残党は、かつての偉大なモンゴル軍のように、敵の心の中に恐怖を植え付けてステップを横断する。\nもうたくさんだ！これらの土地を横断して遺産の旗を掲げている価値ある人々！我々は新しい神の前で屈服しながらも、チンギス・ハンの血はまだ我々の脈の中を流れている。我々はキプチャクであり、我々の正当なもののためにやって来た！"
@@ -156,7 +156,7 @@
  reform_into_iqta_desc:0 "王権と統治には多様な形態があり、我々の伝統はイスラム世界の主流ではない。イクター制を採用することによって、信頼できるアミールにのみ徴税権を授与し、領土に直接支配を及ぼすことができる。"
  enforce_religion_muslim_title:0 "宗教的統一を強制"
  enforce_religion_muslim_desc:0 "我々は帝国内で異端を許容する訳にはいかない。間違った宗教的指導者や司祭の流儀に従う全ての信者を対象とする厳しい法体制により、我々は帝国内に蔓延る全ての異端勢力を排除することができる。"
- remove_non_electors_emperors_from_empire_effect_tooltip:0 "全ての所有州は神聖ローマ帝国から抜け出します。"
+ remove_non_electors_emperors_from_empire_effect_tooltip:0 "全領有州が神聖ローマ帝国から抜け出します。"
  muslim_conversion_to_sikhism_title:0 "シーク教への改宗"
  muslim_conversion_to_sikhism_desc:0 "新しい信仰が我々の土地で広がっている。シーク教は、グル・ナーナクとその後継者の教えに従っており、その言葉はますます多くの我々の国民たちの中で勢いを増している。我々がこの信仰を自身のために採用することで、我々は何世代にもわたってシーク教の運動の支持を得ることだろう。"
  scottish_nation_title:0 "スコットランド国家の形成"
@@ -188,7 +188,7 @@
  curtail_prussian_confederation.tooltip:0 "§Yプロシア連合が我々に対して立ち上がることはないでしょう。§!"
  restore_mongol_empire_title:0 "モンゴル帝国の復興"
  restore_mongol_empire_desc:0 "チンギス・ハーンの帝国は崩壊し、多くの国家に分裂した。大ハーンの征服を再現することにより、彼の遺産を復元せねばならない。我々はモンゴル帝国を取り返すだろう！"
- mongolia_decision_tooltip:0 "§Y[Root.GetName]§!がモンゴル地域の植民地化された州を全て領有する。"
+ mongolia_decision_tooltip:0 "§Y[Root.GetName]§!がモンゴル地方の植民地化された州を全て領有する。"
  restore_ilkhanate_decision_march_title:0 "イルハン朝の復興"
  restore_ilkhanate_decision_march_desc:0 "大カンがはるか昔にしたように、我々は広大な帝国を支配する負担を軽減するため、ペルシアを下位のカンに委任すべきである。"
  restore_ilkhanate_decision_title:0 "イルハン朝の再建"
