--- a/source/localisation/emperor_content_l_english.yml
+++ b/source/localisation/emperor_content_l_english.yml
@@ -185,7 +185,7 @@
  dutch_unification_tt:0 "§Y[dutch_unification_country.GetName]はオランダ、フリースラント、フランドルの我々の従属国が支配する州をすべて獲得します。§!"
  dutch_revolt_modifier:0 "オランダの反乱"
  desc_dutch_revolt_modifier:0 "この州の人々はオランダの独立を求めている。"
- dutch_revolt_tt:0 "§Y低地諸国§!地方で領有する全ての§Yオランダ§!、§Yフリース§!または§Yフラマン§!文化の州は§Yオランダの反乱§!の補正を獲得し、国難が解決するまでの間、州不穏度§R+10§!を得ます。"
+ dutch_revolt_tt:0 "§Y低地諸国§!地方で§Yオランダ§!、§Yフリース§!または§Yフラマン§!文化の全領有州は、補正§Yオランダの反乱§!を獲得し、国難が解決するまでの間、州の不穏度が§R+10§!されます。"
  dutch_revolt_disaster:0 "オランダの反乱"
  dutch_revolt_disaster_desc:0 "オランダ人たちは[Root.GetName]の支配に不満を抱き、独立戦争を起こそうとしている。"
  dutch_revolt.1.t:0 "オランダ反乱の終結"
@@ -1089,8 +1089,8 @@
  incident_pope:0 "教皇と帝国"
  incident_pope_member_alert:0 "イタリアが再び帝国の権威の砦となったことで、ローマ教皇は神聖ローマ帝国領邦となることを求めている。教皇が皇帝の権威を受け入れることはカトリック世界に大きな影響をもたらすだろう。帝国内のカトリック諸侯は、教皇の加盟によって与えられる正統性によって信仰を強化できるかもしれないが、帝国外の国家はそのような決定を好意的に捉える可能性は低く、異端者へと変わる可能性もある。"
  incident_pope_emperor_alert:0 "イタリアが再び帝国の権威の砦となったことで、ローマ教皇は神聖ローマ帝国の諸侯となることを求めている。教皇が皇帝の権威を受け入れることはカトリック世界に大きな影響をもたらすだろう。帝国内のカトリック国家は、教皇の参加によって与えられる正統性によって信仰を強化できるかもしれないが、帝国外の国家はそのような決定を好意的に捉える可能性は低く、異端者へと変わる可能性もある。"
- flavour_tupi_tamoyo_force:1 "トゥピナンバ文化に隣接する領有州はすべて、§Y5§!年間§Y「トゥピの敵意」§!の補正を獲得し、以下の効果を得ます：\n州不穏度：§R+1§!\n州税収：§R-10%§!\n州の植民地成長：§R-15§!"
- flavour_tupi_tamoyo_jesuits:1 "トゥピナンバ文化の領有州はすべて、§Y10§!年間§Y「トゥピの敵意」§!の補正を獲得し、以下の効果を得ます：\n州不穏度：§R+1§!\n州税収：§R-10%§!\n州の植民地成長：§R-15§!"
+ flavour_tupi_tamoyo_force:1 "トゥピナンバ文化に隣接する領有州はすべて、補正§Y「トゥピの敵意」§!を§Y5§!年間獲得し、以下の効果を得ます：\n州の不穏度：§R+1§!\n州の税収：§R-10%§!\n州の植民地成長：§R-15§!"
+ flavour_tupi_tamoyo_jesuits:1 "トゥピナンバ文化の領有州はすべて、補正§Y「トゥピの敵意」§!を§Y10§!年間獲得し、以下の効果を得ます：\n州の不穏度：§R+1§!\n州の税収：§R-10%§!\n州の植民地成長：§R-15§!"
  flavor_tupi_confederation:1 "このオプションを選択することで、他のトゥピ族との同盟を構築する可能性があります。"
  tamoyo_rivals:1 "植民地のライバルへの干渉"
  EVTOPTC710:2 "[Root.GetLowLevelOfficialForCountry]を処刑しろ！"
@@ -1612,7 +1612,7 @@
  string_l_cocoa:0 "ココア"
  string_l_coffee:0 "コーヒー"
  string_l_sugar:0 "砂糖"
- random_event.EVTOPTA25.tt.ttt.tttt.ttttt:0 "プロテスタント、改革派あるいは聖公会に従うヨーロッパの領有州はすべて、不穏度を§R10§!獲得します。"
+ random_event.EVTOPTA25.tt.ttt.tttt.ttttt:0 "プロテスタント、改革派あるいは聖公会に従うヨーロッパの領有州はすべて、不穏度を§R10§!得ます。"
  this_parliament:0 "[This.GetParliamentName]"
  this_the_parliament:0 "[This.GetParliamentName]"
  this_the_parliament_cap:0 "[This.GetParliamentName]"
@@ -1998,9 +1998,9 @@
  roman_garisson:0 "強化されたローマ守備隊"
  desc_roman_garisson:0 "ローマ略奪後、我々はその悲劇が再び起こることのないよう、ローマの守備隊を強化した。"
  cardinal_nephew_tt:0 "§Y[cardinal_nephew_country.GetName]がイベントを受け取ります。§!"
- adm_vatican_library_tt:1 "§Yバチカン図書館－統治版§!は§Y[118.GetName]§!に設立され、以下の効果を得ます：\n統治技術コスト：§G-5%§!\n国家不穏度：§G-2§!"
- dip_vatican_library_tt:0 "§Yバチカン図書館－外交版§!は§Y[118.GetName]§!に設立され、以下の効果を得ます：\n外交技術コスト：§G-5%§!\n外交評判：§G+1§!"
- mil_vatican_library_tt:0 "§Yバチカン図書館－軍事版§!は§Y[118.GetName]§!に設立され、以下の効果を得ます：\n軍事技術コスト：§G-5%§!\n戦闘からの陸軍伝統：§G+50%§!"
+ adm_vatican_library_tt:1 "§Yバチカン図書館－統治版§!が§Y[118.GetName]§!に設立され、以下の効果を得ます：\n統治技術コスト：§G-5%§!\n国家不穏度：§G-2§!"
+ dip_vatican_library_tt:0 "§Yバチカン図書館－外交版§!が§Y[118.GetName]§!に設立され、以下の効果を得ます：\n外交技術コスト：§G-5%§!\n外交評判：§G+1§!"
+ mil_vatican_library_tt:0 "§Yバチカン図書館－軍事版§!が§Y[118.GetName]§!に設立され、以下の効果を得ます：\n軍事技術コスト：§G-5%§!\n戦闘からの陸軍伝統：§G+50%§!"
  fra_pro_tt:0 "§Yプロヴァンス§!地域の§Y3§!以上の州が§Y[Root.GetName]§!またはその非独立国である従属国に領有されている。"
  center_of_revolution.13.t:0 "自由の夢"
  center_of_revolution.13.d:0 "[revolution_target.GetName]の革命の言葉は新世界の植民地に広まっている。自由の激しいレトリックは、今、植民地の独立を夢見る人々の心に火をつける。\n\n[revolution_target.Capital.GetCapitalName]からのプロパガンダを広める狡猾な革命に終止符を打つことができれば、この反抗的な精神は確実に弱まるだろう。"
