--- a/source/localisation/generic_events_l_english.yml
+++ b/source/localisation/generic_events_l_english.yml
@@ -1532,7 +1532,7 @@
  EVTNAME960:0 "ハイランダーズの到着"
  EVTDESC960:0 "[Root.Owner.Monarch.GetTitle]閣下、イングランドは[Root.GetCapitalName]に向かい進んでおります。貴族の大部分は戦いへの態度を明らかにしていませんが、その噂は広がっています。\n\nハイランダーズが我々に加わるためこちらに向かっております。彼らは何百…何千人もが到着しています！"
  EVTOPTA960:0 "我々は戦争の準備ができている！"
- EVTNAME7001:0 "地方貴族の抗議"
+ EVTNAME7001:0 "在地貴族の抗議"
  EVTDESC7001:0 "我々の新しい支配者は、雇用において彼の領土の貴族を支持しているようだ。我々の既存の貴族たちは、何世紀にもわたってきた良い作法が愚かに無視されていると怒っている。"
  EVTOPTA7001:0 "いくつか彼らの首を切れ！"
  EVTOPTB7001:0 "調整しよう。"
@@ -1904,9 +1904,9 @@
  china_events.57.t:0 "謀反"
  china_events.57.d:0 "帝国の至る所にいる君主たちは、地方の支配がより弱くなるにつれ、これを大きな関心を持って見守っている。地域によってはすでに権威を奪い始めており、他方では明白な反乱が差し迫っているようだ。"
  china_events.57.a:0 "帝国の制度が崩れてゆく…"
- low_mandate_separatism_tooltip_1:0 "§Y[low_mandate_separatism_country.GetName]§!の支配下にあるすべての§Y中核州§!で§Y地方不穏度§!が§R10§!増加します。"
- low_mandate_separatism_tooltip_2:0 "§Y[low_mandate_separatism_country_2.GetName]§!の支配下にあるすべての§Y中核州§!で§Y地方不穏度§!が§R10§!増加します。"
- low_mandate_separatism_tooltip_3:0 "§Y[low_mandate_separatism_country_3.GetName]§!の支配下にあるすべての§Y中核州§!で§Y地方不穏度§!が§R10§!増加します。"
+ low_mandate_separatism_tooltip_1:0 "我々の支配下にある§Y[low_mandate_separatism_country.GetName]§!の§Y中核州§!すべてで§Y州の不穏度§!が§R10§!増加します。"
+ low_mandate_separatism_tooltip_2:0 "我々の支配下にある§Y[low_mandate_separatism_country_2.GetName]§!の§Y中核州§!すべてで§Y州の不穏度§!が§R10§!増加します。"
+ low_mandate_separatism_tooltip_3:0 "我々の支配下にある§Y[low_mandate_separatism_country_3.GetName]§!の§Y中核州§!すべてで§Y州の不穏度§!が§R10§!増加します。"
  china_events.58.t:0 "内閣大学士は月に吠える"
  china_events.58.d:0 "最近、深夜に内閣大学士の別荘から奇妙な騒音が聞こえており、月ごとにその激しさと強さが増している。最初のうち、あなたは彼が妾の一人との複雑な遊びなのだろうと考えていたが、しかし最近、月の位相と騒音との間に顕著な繋がりがあることが浮かび上がってきた。満月の夜に庭園に送られた諜報員は、不安にさせるような知らせを持ち帰った。内閣大学士は、彼の庭に立ち、月に向かって吠えながら夜を過ごしていたというのだ。"
  china_events.58.a:0 "シャ・ラ・ラ・ラ！"
@@ -2863,7 +2863,7 @@
  EVTDESC883:1 "ルネサンスの様々な革新的な思想は[renaissance_province.GetAreaName]を通じて広がっている。すでに多くの裕福な一族が有望な芸術家たちに資金援助を提供することを決めた。我々はそこに印を残さず、歴史に身を任せるのか？"
  EVTOPTA883:0 "我々は咲き誇るルネサンスの芸術を支援しなければならない。"
  EVTOPTB883:0 "私は金を費やすより良いものを持っている。"
- EVTNAME884:0 "地方貴族の権力の成長"
+ EVTNAME884:0 "在地貴族の権力の成長"
  EVTDESC884:1 "宮廷での陰謀、巧みな同盟、そして多くの日和見を通して、地方の貴族である[Root.local_noble_name.GetName]は[local_noble_province.GetName]に強力な権力基盤を築き上げた。彼の影響力と彼自身が私的な軍隊の一部として維持している支持者の大きな力を考えると、彼の力を減らすことは困難なことがわかるが、我々が今、彼に対処しなければ、彼は王位を僭称するようになるかもしれない。"
  EVTOPTA884:0 "彼を無視する。"
  EVTOPTB884:0 "宮廷で彼を出し抜く。"
@@ -3799,7 +3799,7 @@
  random_event.EVTDESC5:0 "最近、人々は我々の治世の正統性を疑い始めた。我々は彼らに支配者の権利を思い出させる必要がある！"
  random_event.EVTOPTA5:0 "我が祖先に栄光を！考えられる最大の記念碑を建設しよう！"
  random_event.EVTOPTB5:0 "祖先の一つの素敵な彫像を建設する。"
- random_event.EVTOPTC5:0 "私に祖父を思い出させないでくれ。"
+ random_event.EVTOPTC5:0 "私に祖父を思い出させないでくれ…"
  random_event.EVTNAME6:0 "馬上槍試合の新しい王者"
  random_event.EVTDESC6:0 "最近の馬上槍試合では、無名の庶民が出場し、彼が優勝者と宣言されるまで、彼と対戦したすべての人を打ち負かしたことで皆を驚かせた。今、我々は彼に対して何をするのかという厄介な決断に直面している。"
  random_event.EVTOPTA6:0 "その男は我々の軍を率いるべきだ！"
@@ -4458,7 +4458,7 @@
  the_silence_of_the_lambs:0 "羊たちの沈黙"
  desc_the_silence_of_the_lambs:0 "家畜がの不足により、兵士に十分な食事を与えることができない。"
  ideagroups.1927.t:0 "腐った心"
- ideagroups.1927.d:0 "[Root.Monarch.GetName]は、自分の宮殿の近辺を歩き回り、茂みの中で安らぎを求めるのが習慣でした。しかし、今日戻ってきた君主は...少し変わった様子でした。今朝、宮殿に到着した[Root.Monarch.GetName]の目は真っ赤で、その口は荒地のように乾いており、飢えた犬のように地面に落ちた恋人の心臓の断片を食べようかな、と言った際の声はしわがれていました。\n\n君主の正気を恐れた探検家たちは、君主の足跡を辿り、納得がいくも不穏な答えを見つけました。近くの洞窟から有害ガスが発生していたのです。"
+ ideagroups.1927.d:0 "[Root.Monarch.GetName]は、自分の宮殿の近辺を歩き回り、茂みの中で安らぎを求めるのが習慣でした。しかし、今日戻ってきた君主は…少し変わった様子でした。今朝、宮殿に到着した[Root.Monarch.GetName]の目は真っ赤で、その口は荒地のように乾いており、飢えた犬のように地面に落ちた恋人の心臓の断片を食べようかな、と言った際の声はしわがれていました。\n\n君主の正気を恐れた探検家たちは、君主の足跡を辿り、納得がいくも不穏な答えを見つけました。近くの洞窟から有害ガスが発生していたのです。"
  ideagroups.1927.a:0 "この状態では現君主に統治など無理だ。"
  ideagroups.1928.t:0 "権力の座"
  ideagroups.1928.d:0 "さすらいの文明であるため、砦は私たち民族にとって優先度の高いものでは決してありませんでした。しかし、時代は変わり、私達も変わるべきででしょう。今では、偉大な支配者を守るための要塞が必要とされていて、国中から砦を建設するにふさわしい場所を確保しましょう。"
@@ -4505,7 +4505,7 @@
  ideagroups.1916.d:0 "宗教の信奉者の影響力が高まる中、[Root.Monarch.GetName]の評議会に殺意を抱いた諜報員が派遣されているという噂で持ち切りです。[Root.Adm_Advisor.GetName]は、自国の国民に対して防諜網を発信する必要性を示唆しました。他の時代では考えられないことですが、現在では、それが唯一の論理的な選択肢であるようです。"
  ideagroups.1916.a:0 "彼らを見守るのだ。"
  ideagroups.1917.t:0 "目には目を"
- ideagroups.1917.d:0 "この戦争で兵は疲弊し、予備兵の人員も徐々に減り始めています。敵の将軍はこれを利用して、[Root.GetName]の新部隊を否定するため、新たな傭兵を募集しようとしました。しかし、彼の声は聞こえませんでした。なぜなら、私たち支配者の威光と私たちの神の恐怖は、彼の哀れな目的よりも大きいからです...そして、自国の金もです。"
+ ideagroups.1917.d:0 "この戦争で兵は疲弊し、予備兵の人員も徐々に減り始めています。敵の将軍はこれを利用して、[Root.GetName]の新部隊を否定するため、新たな傭兵を募集しようとしました。しかし、彼の声は聞こえませんでした。なぜなら、私たち支配者の威光と私たちの神の恐怖は、彼の哀れな目的よりも大きいからです…そして、自国の金もです。"
  ideagroups.1917.a:0 "歯には歯を。"
  an_eye_for_an_eye:0 "目には目を"
  desc_an_eye_for_an_eye:1 "傭兵は国家の人的資源不足を補うものだ。"
@@ -4571,7 +4571,7 @@
  traditions_disrespected:0 "伝統の軽視"
  desc_traditions_disrespected:0 "彼らの伝統は我々よりも劣っている、よって、彼らはそれを捨てて適応する。"
  ideagroups.1941.t:0 "新しい考えは誰にでもできるものではない"
- ideagroups.1941.d:1 "伝統と外国の考えは、必ずしもうまくかみ合うとは限りません。新しい考えを取り入れることで、自分たちの文化から離れていくのではないかと感じる人もいます。しかし、彼らから多くのものを得ているのです..."
+ ideagroups.1941.d:1 "伝統と外国の考えは、必ずしもうまくかみ合うとは限りません。新しい考えを取り入れることで、自分たちの文化から離れていくのではないかと感じる人もいます。しかし、彼らから多くのものを得ているのです…"
  ideagroups.1941.a:0 "理解できないね。"
  peace_kept:0 "平和維持"
  desc_peace_kept:0 "国民の中では平和が保たれており、その結果を国土全体で享受している。"
