--- a/source/localisation/golden_century_l_english.yml
+++ b/source/localisation/golden_century_l_english.yml
@@ -106,7 +106,7 @@
  ESTABLISH_HOLY_ORDER_WRONG_OWNER:0 "§R修道会を設立するには、ステートを自国か従属国が領有していなければなりません。§!"
  ESTABLISH_HOLY_ORDER_NOT_OWNING_ALL:1 "§R修道会を設立するには、ステートを自国か従属国が領有し、中核化していなければなりません。§!"
  removes_slaves_tooltip:0 "このステート内に交易品として§Y奴隷§!があるとき、これを新たな交易品に置き換えます。"
- EVERY_PROVINCE_IN_STATE:0 "ステートの全ての州"
+ EVERY_PROVINCE_IN_STATE:0 "ステートのすべての州"
  HOLY_ORDER_DESC:1 "自国が領有し、完全に中核化したステートで修道会を設立することができます。修道会を設立すると、設立したステートの州すべてに対して即座に、そして恒久的に効果が得られます。一度設立すると変更はできません。"
  HOLY_ORDER_DISABLED_NOT_OWNING_ALL:0 "§Rステート内のすべての州が$COUNTRY$によって領有され、中核化されていないので、この修道会は現在その任務を遂行できません。§!"
  HOLY_ORDER_ESTABLISHED_BY:0 "設立国：\n$COUNTRY$"
@@ -386,7 +386,7 @@
  MISSIONARY_MAINT_ENVOY_ENTRY:0 "$LOCATION|Y$の$NAME|Y$には毎月$COST|R$¤必要です。\n"
  CONFIRMMISSION_MAINTENANCE_COST:1 "この州を改宗するには毎月$COST|R$¤必要です。コストは州の開発と自治率によって決まります。"
  PROVINCEMISSION_MAINTENANCE_COST:0 "我々は今月この宣教師に$COST|R$¤を支払っています。"
- MODIFIER_LOCAL_MISSIONARY_MAINTENANCE_COST:0 "地方の宣教師維持費"
+ MODIFIER_LOCAL_MISSIONARY_MAINTENANCE_COST:0 "州の宣教師維持費"
  DEATH_NAMED_ADMIRAL_BECOMES_RULER:0 "$NAME|Y$提督が国家を統治する。"
  DEATH_ADMIRAL_BECOMES_RULER:0 "提督が国家を統治する。"
  DISALLOWED_TRADE_GOODS:0 "交易禁止品："
