--- a/source/localisation/manchu_l_english.yml
+++ b/source/localisation/manchu_l_english.yml
@@ -153,7 +153,7 @@
  desc_mongol_rule_tibet:0 "ダライ・ラマの提案を拒否し、チベットの武力支配を選択した。"
  mongol_religion_unity:0 "信仰の統一"
  desc_mongol_religion_unity:0 "モンゴルの人々は宗教の違いを克服した。"
- mongol_fleet_modifier:0 "モンゴル艦船の建造"
+ mongol_fleet_modifier:0 "モンゴル艦隊の建設"
  desc_mongol_fleet_modifier:0 "今回は神風が吹いたとしても計画は狂わないだろう。幕府は必ず倒れる！"
  mongol_defeated_japan:0 "幕府の崩壊"
  desc_mongol_defeated_japan:0 "幕府の所在地である京都を破壊し、それによって、我が祖先が成し得なかったことを成し遂げた。"
@@ -172,12 +172,12 @@
  mch_missions.6.d:1 "モンゴル族のハンである[Root.Monarch.GetName]は、華奢で禿げた僧侶と会うことに何の価値があるのか訝しんでいました。このダライ・ラマが既に失われた権力の残滓をただ持っているだけに過ぎないことは間違いありません。チベットは現在[Root.GetAdjective]の支配下にあり、旧体制と交渉する必要性は本当はありません。しかし、モンゴル人の多くの指導者は仏教を信仰し、霊の導きをラマに求めていたため、[Root.Monarch.GetTitle]はやむなく出席しました。\n\n[Root.Monarch.GetTitle]が非常に驚いたことに、ダライ・ラマから実に興味深い提案がありました。チベット仏教が全モンゴル民族の新しい信仰であると宣言すれば、ダライ・ラマは[Root.Monarch.GetName]がチンギス・ハンの生まれ変わりであると世界に明らかにするとのことです。これが[Root.Monarch.GetTitle]に与える正統性は計り知れませんが、全員がこの新しい信仰を喜んで受け入れてくれはしないでしょう。"
  mch_missions.6.a:0 "ダライ・ラマとの協調を承諾せよ。"
  mch_missions.6.b:0 "こんな馬鹿げた迷信に耳を貸さない。"
- mongol_tibetan_rulership_tt:1 "§Yチベット§!地方で§Y密教§!の領有州はすべて、§Y20年間§!§Yチベットの征服§!の補正を獲得し、以下の効果を得ます：\n州の自治率：§G-0.05§!\n州の不穏度：§G-3§!"
+ mongol_tibetan_rulership_tt:1 "§Yチベット§!地方で宗教が§Y密教§!の全領有州は§Y20年間§!、補正§Yチベットの征服§!を獲得し、以下の効果を得ます：\n自治率：§G-0.05§!\n州の不穏度：§G-3§!"
  mch_missions.7.t:0 "モンゴル族の再統一"
  mch_missions.7.d:0 "大モンゴル帝国の崩壊以来、モンゴル族を再統一しようという試みは何度も行われてきました。ほんの束の間すら成功した者は誰もいません。我々以前の多くの人たちと同じように、あらゆる部族の戦士や族長と一体となって遊牧民を団結させましたが、さらに大きな団結を目指さなければ、この団結は一時的なものになるでしょう。チンギス・ハンが成したように、モンゴル人全てが一つの民族であり、彼らの間にあった溝の全てが過去のものとなったと宣言できるでしょう。あるいは、部族の独自性を認識しつつ、権利と領土を明確に定義して、部族を再編することもできるでしょう。"
  mch_missions.7.a:0 "私たちは全員モンゴル族だ。"
  mch_missions.7.b:0 "部族を再編せねばならない。"
- unite_mongol_culture_tt:1 "自国で領有している§Yホルチン§!、§Yハルハ§!、§Yオイラト§!文化の州全てが§Yモンゴル§!文化へ変更されます。"
+ unite_mongol_culture_tt:1 "§Yホルチン§!、§Yハルハ§!、§Yオイラト§!文化の全領有州が§Yモンゴル§!文化へ変更されます。"
  SOO:0 "宗"
  SOO_ADJ:0 "宗"
  pirates.21.t:0 "倭寇時代への回帰"
@@ -313,7 +313,7 @@
  JAP_colonize_california_desc:0 "海の向こうには好機に満ちた新世界がある。計り知れないほど裕福な王国、収奪の頃合いを迎えている黄金の国について囁く者さえいた。その土地への足掛かりを築き、発見されたものから利益を得る方法を確立すべきだ。"
  JAP_siberian_boom:0 "シベリアの活況"
  JAP_gokaido_stations:0 "五街道の宿駅"
- JAP_gokaido_stations_for_everyone:0 "自国の領有州はすべて、20年間§Y五街道の宿場§!の補正を獲得し、以下の効果を得ます：\n友軍の移動速度：§G+10.0%§!\n月毎の自治率の変動：§G-0.05§!"
+ JAP_gokaido_stations_for_everyone:0 "自国の領有州はすべて、補正§Y五街道の宿場§!を20年間獲得し、以下の効果を得ます：\n友軍の移動速度：§G+10.0%§!\n月間自治率変動：§G-0.05§!"
  JAP_sankin_kotai_modifier:0 "参勤交代"
  JAP_social_hierarchy:0 "社会的序列の管理"
  JAP_indochinese_trade:0 "インドシナの朱印船"
@@ -368,7 +368,7 @@
  kor_seize_southern_manchuria_desc:0 "満州との国境を朝鮮半島の領域を超えて押し戻すことで、朝鮮の国力と安全保障を大きく上げることができる。"
  kor_end_manchuria_title:0 "満州の終焉"
  kor_end_manchuria_desc:0 "記憶の限りでは、満州は朝鮮民族に脅威を与えてきた。最近、彼らを追い返し、本土の奥深くへと国境を押し戻した。彼らを二度と立ち上がれないようにする時だ。"
- kor_end_manchu.tooltip:0 "満州地方の領有州はすべて、§Y満州での朝鮮支配§!を獲得し、以下の効果を得ます：\n月毎の自治率の変動：§G-0.05§!"
+ kor_end_manchu.tooltip:0 "満州地方の領有州はすべて、§Y満州での朝鮮支配§!を獲得し、以下の効果を得ます：\n 月間自治率変動：§G-0.05§!"
  kor_build_army_mission_title:0 "扶養限界まで軍拡"
  kor_build_army_mission_desc:0 "成長している国家は、適切な規模の軍隊を維持する必要がある。我々の軍隊を拡大することで、我々は海外の政治的利益をさらに高め、国内経済を刺激することができる。"
  kor_harness_seokleon_title:0 "石合戦の利用"
@@ -392,7 +392,7 @@
  kor_fortify_korea_desc:2 "チョルリジャンソン、「千里長城」は、朝鮮半島北部に広がる要塞群であり、女真族の略奪から人々を守るため、我々の祖先たちによって建設された。朝鮮の安全を確保するため、良く修繕された状態を維持する必要がある。"
  kor_built_the_wall:0 "千里長城"
  desc_kor_built_the_wall:2 "チョルリジャンソン、「千里長城」は、朝鮮半島北部に広がる要塞群であり、女真族の略奪から人々を守るため、我々の祖先たちによって建設された。"
- kor_fortify_korea_tooltip:0 "このミッションの条件を満たす州に、人的資源の開発度§Y+2§!と§Y千里長城§!の補正を獲得し、州内要塞防御§G+25%§!が与えられます。"
+ kor_fortify_korea_tooltip:0 "このミッションの条件を満たす州に、基礎人的資源が§Y+2§!、補正§Y千里長城§!（州の要塞防御§G+25%§!）が付与されます。"
  kor_fortify_korea_2_title:0 "隠者の王国"
  kor_fortify_korea_2_desc:0 "領土が小さく、中国や日本、満州といった自国より強力な国家（団結時）の間に位置しているので、朝鮮が長年にわたって頻繁に侵略を受けてきたことは、当然のことだ。侵略に対する安全確保の方法は、自国に誰も立ち入れないようにすることだけだ。"
  kor_built_the_wall_2:0 "隠者の王国"
@@ -449,7 +449,7 @@
  have_no_estates_tooltip:0 "§Y階級§!が存在しない。"
  have_no_estate_land_tooltip:0 "任意の§Y領土§!を保有する§Y階級§!が存在しない。"
  KOR_two_pleased_estates_tooltip:1 "1つの§Y階級§!が§Y忠誠度60§!以上であり、他の2つが§Y忠誠度40§!以上である。"
- end_manchuria_tooltip:0 "§Y満州§!地方における各地域において1州以上§Y[Root.GetName]§!もしくは[Root.GetAdjective]の従属国（非朝貢国）が領有している。"
+ end_manchuria_tooltip:0 "§Y満州§!の各地域において1州以上、§Y[Root.GetName]§!またはその従属国（非朝貢国）が領有している。"
  kor_manchurian_korea:0 "満州の朝鮮人"
  desc_kor_manchurian_korea:0 "三国時代は古くから続いてきたが、我々は領土を再び統一し、朝鮮をかつての栄光に戻した。"
  kor_conquest_manchuria:0 "満州の征服"
@@ -520,15 +520,15 @@
  devastate_china_tooltip:0 "[Root.GetName]が占領しているが領有していない§Y中国§!圏で、開発度§Y25§!以上であり、§Y20§!以上の荒廃の州が1州以上存在する"
  establish_tributaries_tt:1 "国家が§Y[Root.GetName]§!の朝貢国である"
  xilin_gol_area:0 "シリンゴル"
- restore_yuan_tt:90 "§Y華北§!地方の少なくとも§Y20§!の州が[Root.GetName]によって領有され中核州になっている"
- reconquer_china_tt:0 "§Y西南§!または§Y華南§!地方の少なくとも§Y40§!の州が[Root.GetName]によって領有されている"
- mongol_ca_tt:0 "§Y中央アジア§!地方の少なくとも§Y30§!の州が[Root.GetName]によって領有されている"
- mongol_persia_tt:0 "§Yペルシア§!または§Yホラーサーン§!地方の少なくとも§Y30§!の州が[Root.GetName]によって領有されている"
- mongol_anatolia_tt:0 "§Yアナトリア§!または§Yマシュリク§!地方の少なくとも§Y40§!の州が[Root.GetName]によって領有されている"
- mongol_tibet_tt:0 "§Yチベット§!地方の少なくとも§Y10§!の州が[Root.GetName]によって領有されている"
- mongol_tatars_tt:0 "§Yポントス草原§!地方の少なくとも§Y10§!の州が[Root.GetName]によって領有されている"
+ restore_yuan_tt:90 "§Y華北§!地方の少なくとも§Y20§!州が[Root.GetName]によって領有され中核州になっている"
+ reconquer_china_tt:0 "§Y西南§!または§Y華南§!地方の少なくとも§Y40§!州が、[Root.GetName]に領有されている"
+ mongol_ca_tt:0 "§Y中央アジア§!地方の少なくとも§Y30§!州が、[Root.GetName]に領有されている"
+ mongol_persia_tt:0 "§Yペルシア§!または§Yホラーサーン§!地方の少なくとも§Y30§!州が、[Root.GetName]に領有されている"
+ mongol_anatolia_tt:0 "§Yアナトリア§!または§Yマシュリク§!地方の少なくとも§Y40§!州が、[Root.GetName]に領有されている"
+ mongol_tibet_tt:0 "§Yチベット§!地方の少なくとも§Y10§!州が、[Root.GetName]に領有されている"
+ mongol_tatars_tt:0 "§Yポントス草原§!地方の少なくとも§Y10§!州が、[Root.GetName]に領有されている"
  mongol_yam_tt:0 "§Yホラーサーン§!、§Y中央アジア§!、§Yモンゴル§!または§Y華北§!地方でレベル§Y3§!の交易中心地のある州を§Y3§!州以上領有する"
- mongol_rus_tt:0 "§Yロシア§!または§Yルーシ§!地方の少なくとも§Y30§!の州が[Root.GetName]によって領有されている"
+ mongol_rus_tt:0 "§Yロシア§!または§Yルテニア§!地方の少なくとも§Y30§!州が、[Root.GetName]に領有されている"
  PROV4664:1 "オロチョン"
  PROV_ADJ4664:1 "オロチョン"
  PROV4665:1 "西ブトハ"
@@ -699,7 +699,7 @@
  aqmola_area:0 "アクモラ"
  aqmola_area_name:0 "アクモラ"
  aqmola_area_adj:0 "アクモラ"
- JAP_siberian_intervention_tt:0 "§Y東シベリア§!地方の領有州はすべて、§Y10§!年間「§Yシベリアの活況§!」を獲得し、以下の効果を得ます：\n州交易品生産補正：§G+15.0%§!"
+ JAP_siberian_intervention_tt:0 "§Y東シベリア§!地方の領有州はすべて、「§Yシベリアの活況§!」を§Y10§!年間獲得し、以下の効果を得ます：\n州の交易品生産補正：§G+15.0%§!"
  desc_JAP_siberian_boom:0 "シベリアへの投資は、この地域に多くの探鉱者や冒険家を呼び寄せ、生産性を高めている。"
  desc_JAP_gokaido_stations:0 "国土の主要道に沿った宿駅は、移動を楽にするだけでなく、辺境地を中央集権化する手助けにもなる。"
  desc_JAP_sankin_kotai_modifier:1 "首都において、広く絶えず変化する領主の支持層に順応することで、政府は一度に多くの外交問題の処理に長けている。"
@@ -755,7 +755,7 @@
  xilin_gol_area_adj:0 "シリンゴル"
  sinicize_culture_title:0 "我々の文化の中国化"
  sinicize_culture_desc:0 "我々の文化は我らの最高の誇りである。我々の言葉は他に類を見ないものであり、我々の伝統と遺産は社会の柱である。\nそれでも、中国の言語と文化が数十年にわたって我々に与えてきた影響を否定することはできないし、その影響は未だかつてないほど大きいものとなっている。誰もがこの決定に賛同しているわけではないが、我が国の[Root.Culture.GetName]人と中国人との間により素晴らしい調和を生み出すために、我々の文化を中国化することは考慮する価値のあることかもしれない。"
- sinicize_culture_tt:0 "新世界またはオセアニアにない§Y[Root.Culture.GetName]§!文化の全州を[Root.GetName]またはその従属国（非朝貢国）が領有している。"
+ sinicize_culture_tt:0 "新世界またはオセアニアにない§Y[Root.Culture.GetName]§!文化の州をすべて[Root.GetName]またはその従属国（非朝貢国）が領有している。"
  chinese_culture_group_dominates_in_country:0 "中華文化グループの1つが[Root.GetName]の§Y支配的な文化§!である。"
  sinicize_culture_ct:0 "§Y[Root.Culture.GetName]§!文化の州がすべて§Y中華§!文化グループに取り入れられます。"
  sinicize_mongols_ct:0 "§Yモンゴル§!、§Yホルチン§!、§Yハルハ§!、§Yオイラト§!文化の州がすべて§Y中華§!文化グループに取り入れられます。"
@@ -775,7 +775,7 @@
  flavor_kor.14.t:0 "[From.GetName]が朝貢国化を懇願"
  flavor_kor.14.d:0 "[From.GetName]の[From.Monarch.GetTitle]がついに我々の優れた軍事力を認め、我らが偉大なる[Root.GovernmentName]の朝貢国になることを要請してきたのです。もちろん、この要求を受け入れる正当な理由があるものの、我々は朝鮮半島への進出計画をあきらめざるを得なくなるでしょう。"
  flavor_kor.14.a:0 "要請を受け入れる"
- flavor_kor.14.a.tt:0 "§Y朝鮮§!地方の全ての領有州が§Y[KOR.GetName]§!に返還される。"
+ flavor_kor.14.a.tt:0 "§Y朝鮮§!地方の領有州がすべて§Y[KOR.GetName]§!に返還される。"
  flavor_kor.14.b:0 "要請を断る"
  flavor_mch.EVTNAME8:0 "満州の勃興"
  flavor_mch.EVTDESC8:0 "満州地域の女真族は、いつも[Root.GetName]に忠実な朝貢国であった。身の程を弁え、我々に仕えていたのだ。\nしかし、最近ではその態度が大きく変わりつつある。我々が年貢を貰って満足している間に、征服欲溢れる女真族は他部族を征服し、地域と部族を一つにまとめ上げたのだ。"
