--- a/source/localisation/mandala_missions_l_english.yml
+++ b/source/localisation/mandala_missions_l_english.yml
@@ -876,7 +876,7 @@
  desc_che_perfect_stability:0 "安定した生活を送っているからこそ、学者たちは知的活動に集中できる。"
  che_effective_remedies:0 "効果的な治療法"
  desc_che_effective_remedies:0 "植物の知識のおかげで、自軍の回復力が早い。"
- platform_mounds_reward_tooltip:0 "柵もしくは要塞化家屋が建造された領有州全てに対し、25%の州内防御の効果を獲得する。"
+ platform_mounds_reward_tooltip:0 "柵または要塞化家屋がある領有州はすべて、州防御25%を得ます。"
  che_conciliatory_views_tooltip:0 "国教がトーテム信仰の同盟国全てに対し、自国の外交評価が+50される。"
  rebuilding_the_towns:0 "都市の再建"
  desc_rebuilding_the_towns:0 "街や村落を、もっと大きく強大にしている！"
@@ -901,7 +901,7 @@
  pow_tsenacommacah_desc:0 "自国の本土は、土壌の良さと住人の豊かさにより、過密であることで知られている。全人口を抱えるに十分な領地を確保せねばならない。"
  pow_the_laughing_king_title:0 "笑王"
  pow_the_laughing_king_desc:0 "勇敢な戦士であることだけが首長の重要な資質ではなく、忠誠心もまた同様に重要である。大笑王の気高さは他の追随を許さないものであり、彼が自国の側にいることは最高の誉だ。"
- pow_yehakins_effect:0 "要塞化家屋もしくはロングハウスが建造されている領有州全てに対して要塞化される。"
+ pow_yehakins_effect:0 "要塞化家屋またはロングハウスがある領有州はすべて要塞化されます。"
  follows_buddha_tt:0 "§Y仏陀§!の教えに従います"
  desc_mas_all_the_ships_of_aklan:0 "海軍は飛躍的に発展し、最も近い隣国を感心させている。"
  desc_ne_fortified_village:0 "これで村の者たちは安らかに眠れる。"
