--- a/source/localisation/messages_l_english.yml
+++ b/source/localisation/messages_l_english.yml
@@ -137,12 +137,12 @@
  THEYDECLINESHAREMAP_3:0 "$REGION$の"
  THEYDECLINESHAREMAP_4:0 "地域の地図を共有する"
  THEYDECLINESHAREMAP_5:0 "我々の要求を拒否しました。"
- THEYDECLINESHAREMAP_LOG:0 "$RECIPIENT$、$REGION$地域の地図に関する我々の要請を拒否"
+ THEYDECLINESHAREMAP_LOG:0 "$RECIPIENT$、$REGION$地方の地図に関する我々の要請を拒否"
  THEYDECLINESHAREMAP_BTN1:0 "OK"
  THEYDECLINESHAREMAP_BTN2:0 "OK"
  THEYDECLINESHAREMAP_BTN3:0 "移動"
  WESHAREMAP_TITLE:0 "地図の共有"
- WESHAREMAP_SETUP:0 "我々の地域の地図を共有したとき"
+ WESHAREMAP_SETUP:0 "我々の地方の地図を共有したとき"
  WESHAREMAP_HEADER:0 "$MESSENGER$"
  WESHAREMAP_1:0 "地図を共有しました。"
  WESHAREMAP_2:0 "$MONARCHTITLE$、$RECIPIENT$は"
@@ -150,13 +150,13 @@
  WESHAREMAP_4:0 "$REGION$の地図を共有しました。"
  WESHAREMAP_5:0 "彼らは§Y$GAIN$§!の威信を獲得し、我々は$LOSE$の威信を失いました。"
  WESHAREMAP_6:0 "我々は新しく$NUM_PROVS|Y$個の州を知りました！"
- WESHAREMAP_LOG:0 "$RECIPIENT$から$REGION$地域の地図を受領"
+ WESHAREMAP_LOG:0 "$RECIPIENT$から$REGION$地方の地図を受領"
  WESHAREMAP_BTN1:0 "OK"
  WESHAREMAP_BTN2:0 "OK"
  WESHAREMAP_BTN3:0 "移動"
  WESHAREMAP_MAP:0 "発見！"
  SHAREMAP_TITLE:0 "地図の共有"
- SHAREMAP_SETUP:0 "我々が地域の地図を共有したとき"
+ SHAREMAP_SETUP:0 "我々が地方の地図を共有したとき"
  SHAREMAP_HEADER:0 "$MESSENGER$"
  SHAREMAP_1:0 "地図の共有"
  SHAREMAP_2:0 "$MONARCHTITLE$、$RECIPIENT$は我々と"
@@ -164,7 +164,7 @@
  SHAREMAP_4:0 "共有しました。"
  SHAREMAP_5:0 "我々は新しく$NUM_PROVS|Y$個の州を知りました。"
  SHAREMAP_6:0 "これには$PRESTIGE$の威信がかかります。"
- SHAREMAP_LOG:0 "$RECIPIENT$から$REGION$地域の地図を受領"
+ SHAREMAP_LOG:0 "$RECIPIENT$から$REGION$地方の地図を受領"
  SHAREMAP_BTN1:0 "OK"
  SHAREMAP_BTN2:0 "OK"
  SHAREMAP_BTN3:0 "移動"
@@ -178,7 +178,7 @@
  OTHERSHAREMAP_4:0 "$ACTOR$は$NUM_PROVS|Y$個の州について知りました。"
  OTHERSHAREMAP_5:0 "$ACTOR$から$RECIPIENT$へ"
  OTHERSHAREMAP_6:0 "威信が$PRESTIGE$移されました。"
- OTHERSHAREMAP_LOG:0 "$ACTOR$、$RECIPIENT$から$REGION$地域の地図を受領"
+ OTHERSHAREMAP_LOG:0 "$ACTOR$、$RECIPIENT$から$REGION$地方の地図を受領"
  OTHERSHAREMAP_BTN1:0 "OK"
  OTHERSHAREMAP_BTN2:0 "OK"
  OTHERSHAREMAP_BTN3:0 "移動"
@@ -1872,10 +1872,10 @@
  EMPEROR_BTN1:0 "OK"
  EMPEROR_BTN2:0 "OK"
  EMPEROR_BTN3:0 "移動"
- DISCOVER_TITLE:0 "地域が発見された"
- DISCOVER_SETUP:0 "我が国の技術グループ内で初めて全地域を探検したとき"
+ DISCOVER_TITLE:0 "地方が発見された"
+ DISCOVER_SETUP:0 "我が国の技術グループ内で初めて地方全体を探検したとき"
  DISCOVER_1:0 "新たな偉業！"
- DISCOVER_2:0 "我々は世界で初めて以下の地域を全て探検しました"
+ DISCOVER_2:0 "我々は世界で初めて以下の地方をすべて探検しました"
  DISCOVER_3:0 "$REGION$"
  DISCOVER_4:0 "我々の栄光のために。"
  DISCOVER_5:0 "$PRESTIGE$"
