--- a/source/localisation/modifers_l_english.yml
+++ b/source/localisation/modifers_l_english.yml
@@ -17,7 +17,7 @@
  MODIFIER_MAX_ABSOLUTISM:0 "最大絶対主義"
  MODIFIER_CORE_DECAY_ON_YOUR_OWN:0 "外国中核州期間"
  MODIFIER_HARSH_TREATMENT_COST:0 "過酷な処置コスト"
- MODIFIER_AUTONOMY_CHANGE_TIME:0 "自治率変更のクールダウン"
+ MODIFIER_AUTONOMY_CHANGE_TIME:0 "自治率変動のクールダウン"
  MODIFIER_RIVAL_CHANGE_COST:0 "ライバルの変更コスト"
  MODIFIER_RIVAL_BORDER_FORT_MAINTENANCE:0 "ライバルとの国境にある要塞の維持費"
  MODIFIER_UNJUSTIFIED_DEMANDS:0 "不当な請求"
@@ -265,7 +265,7 @@
  desc_mutinous_soldiers:0 "地元の兵士の人々への過度の強要を制限しようとする試みは、広範な反乱を引き起こした。"
  corrupt_bey:0 "腐敗したベイ"
  desc_corrupt_bey:0 "地方のベイが中央政府に送るべき税を着服しているのは有名な話だ。"
- native_presence:0 "地元の原住民"
+ native_presence:0 "州の原住民"
  broken_trade_agreement:0 "破棄された交易協定"
  honored_trade_agreement:0 "名誉ある交易協定"
  trade_conflict:0 "交易紛争"
@@ -833,7 +833,7 @@
  bra_kreditwerk:0 "信用組合"
  desc_bra_kreditwerk:0 "我々は、我々の国家で最も重要な金融制度の一つである階級によって運営される信用組合の権限と特権を拡大している。"
  accepted_culture_demoted:0 "最近文化を降格した"
- MODIFIER_LOCAL_CORE_CREATION:0 "地方の中核州作成コスト"
+ MODIFIER_LOCAL_CORE_CREATION:0 "州の中核州作成コスト"
  bergen_riots:0 "ベルゲンの影響力の喪失"
  nor_hollendertiden:0 "オランダの時代"
  desc_nor_hollendertiden:0 "オランダ商人たちが我々の経済を支配し、結果として我が国はますます海軍志向になってきている。"
@@ -922,7 +922,7 @@
  chi_unhealthy_political_climate:0 "陰謀と暗殺"
  desc_chi_unhealthy_political_climate:0 "首都の政治情勢はますます悪意あるものとなっている。殺人と反逆が一般的になるにつれて、遠い州の統治は苦しんでいる。"
  chi_trade_opportunity:0 "交易の機会"
- chi_separatist_sentiments:0 "地方分離主義"
+ chi_separatist_sentiments:0 "州の分離主義"
  desc_chi_separatist_sentiments:0 "この地方の君主は、中央の権威が崩壊するのを大きな関心を持って眺めており、彼らの蜂起する時を待っている。"
  china_gifted_official:0 "才能ある役人"
  desc_china_gifted_official:0 "この国家は我々の最も才能のある役人によって統治されている。彼による最良の年は、我々の統治者集団全体にとっての誇りである。"
@@ -1007,7 +1007,7 @@
  desc_hun_city_league_obligation:0 "地元の鉱業は現在、この地域で活況を呈しており、地元の都市同盟を活用する見返りに、国の防衛に貢献している。"
  hun_city_leagues_protected:0 "鉱業の急成長"
  desc_hun_city_leagues_protected:0 "広い範囲の自由が与えられたことで、この州の鉱業社会は大きく成長しており、地元経済は活気づいている。"
- slovak_national_awakening:0 "地方分離主義"
+ slovak_national_awakening:0 "州の分離主義"
  desc_slovak_national_awakening:0 "スロヴァキア人はますます民族主義の意識を育んでおり、自らを支配する権利があると感じているものについて語り始めている。"
  slovak_autonomy:0 "スロヴァキア人意識の覚醒"
  desc_slovak_autonomy:0 "スロヴァキアの民族主義運動の高まりは、我々にこれらの州への多くの自由と自治を付与させた。"
@@ -2081,7 +2081,7 @@
  desc_lit_lord_of_the_rus:0 "ロシアの公爵の最も強力な者たちを支配下に置くことで、誰もが認めるルーシの主となった。"
  lit_conquered_rus:0 "ルーシの征服"
  desc_lit_conquered_rus:0 "ルーシの公爵達を従属させるのではなく、刃にかけることを選択したので、我が国家は広範囲の土地を効率的に統合し、国際問題を引き起こすことなく、必要性に順応していっている。"
- MODIFIER_MONTHLY_SUPPORT_HEIR_GAIN:0 "毎月の後継者支援の増加"
+ MODIFIER_MONTHLY_SUPPORT_HEIR_GAIN:0 "月間後継者支援の増加"
  pru_confederation_curtailed_modifier:0 "プロシア連合の縮小"
  desc_pru_confederation_curtailed_modifier:0 "我々の国を離れ分裂させる恐れのあるプロシア連合の影響を除去した。"
  MODIFIER_POWER_PROJECTION_FROM_INSULTS:0 "侮辱からの戦力投射"
