--- a/source/localisation/new_missions_l_english.yml
+++ b/source/localisation/new_missions_l_english.yml
@@ -19,7 +19,7 @@
  establish_high_seas_navy_desc:0 "海を越えて戦力投射をしたいのであれば外洋海軍が必須である。軍艦は高価かもしれないが、新たに支配する市場や征服できる原住民を見つけることができれば、それに見合った価値はある投資だろう。"
  dominate_home_trade_node_title:1 "交易の支配"
  dominate_home_trade_node_desc:0 "我々の商人社会は、長きにわたり、より強く成長してきた。我々は国内交易を真に支配するため必要な支援を彼らに与える時だ。外国人の力が、我々の国民の幸福に影響を与えることを許すべきではない。"
- dominant_home_node_reward_tooltip:0 "今後の運動により、あなたの国内の交易ノードにおいて保有する州の一つが以下を得るでしょう：\n州の交易力：§G+10.00§!\n州の開発コスト：§G-5%§!"
+ dominant_home_node_reward_tooltip:0 "キャンペーン中、自国内の首都交易ノードにある領有州の1つが以下を得ます：\n州の交易力：§G+10.00§!\n州の開発コスト：§G-5%§!"
  trade_company_region_abroad_title:0 "海外への展開"
  trade_company_region_abroad_desc:0 "世界と同じくらい大きなものとして、それはまだいくつかの重要な交易路を通じ、相互に繋がっている。古代の社会では、布、香辛料、金属、地金、陶磁器や、あらゆる種類の商品が、砂漠や海を渡って最も多くを支払う人々にもたらされた。海外の交易地域で有用な港を取得することによって、この交易シェアを奪うことは、小さな権力しかもたないものでさえ、大金持ちにすることができる。"
  administrative_missions:0 "統治ミッション"
@@ -47,8 +47,8 @@
  russia_partitions_poland_new_desc:0 "ポーランド共和国は弱く、誇り高いルテニア人と白ロシア人を支配するには不似合いであり、他の国々もこれを実現させようとしている。地域がライバルの間で分割される前に、我々は行動しなければならない。"
  russian_colony_in_west_siberia_new_title:0 "西シベリアを植民地化"
  russian_colony_in_west_siberia_new_desc:0 "我々はシベリアからタタール人を追い出し始めており、これらの地域の保有を強化するため、砦を確立してロシア支配下に持ち込む必要がある。"
- russia_westsiberia.tooltip:0 "§Y[Root.GetName]§!は西シベリア地域に少なくとも§Y15§!の完全に植民地化した州を所有する。"
- russia_eastsiberia.tooltip:0 "§Y[Root.GetName]§!は東シベリア地域に少なくとも§Y10§!の完全に植民地化した州を所有する。"
+ russia_westsiberia.tooltip:0 "§Y[Root.GetName]§!が西シベリア地方に完全に植民地化した州を少なくとも§Y15§!領有する。"
+ russia_eastsiberia.tooltip:0 "§Y[Root.GetName]§!が東シベリア地方に完全に植民地化した州を少なくとも§Y10§!領有する。"
  lithuanian_alliance_title:0 "リトアニアとの同盟"
  lithuanian_alliance_desc:0 "リトアニアは我々の自然な友人であり、仲間である。我々はかの国との緊密な関係を築くべきである。"
  swe_win_independence_title:0 "カルマル同盟の終焉"
@@ -677,7 +677,7 @@
  usa_old_man_river.tooltip:0 "§Y[Root.GetName]§!がミシシッピ地方の完全に植民地化された州を少なくとも§Y10§!所有する。"
  remaining_steppe_1.tooltip:0 "§Y[Root.GetName]§!がウラル地方のすべての植民地化された州を所有する。"
  remaining_steppe_2.tooltip:0 "§Y[Root.GetName]§!が西シベリア地方のすべての植民地化された州を所有する。"
- trade_company_region_abroad_tooltip:2 "自国の首都と異なる大陸に、§Y5§!つ以上の州を持つ§Y交易会社地域§!が§Y3§!つ以上ある。"
+ trade_company_region_abroad_tooltip:2 "自国の首都と異なる大陸に、§Y5§!州以上領有する§Y交易会社地域§!が§Y3§!つ以上ある。"
  eng_establish_trade_in_home_cot_title:1 "海峡の独占"
  claiming_orkney_title:1 "北部諸島を請求"
  nw_modern.tooltip:0 "隣国が以下の条件を満たす：\n§Y封建制§!を受容している\n技術の先行が§Y1§!未満"
@@ -771,7 +771,7 @@
  dlh_textile_industry.tooltip:0 "§Y織物工場§!または§Y綿花§!を産出する§Y大規模農園§!がある州を10州領有する"
  dlh_grand_trunk_road_title:0 "大幹道"
  dlh_grand_trunk_road_desc:0 "大幹道は世界で最も古い通商路の一つであり、西のカーブルから東のベンガルまで及ぶ。この古代の経路全体を支配できたならば、インド北部全域で効率的な輸送網を持つことになるであろう。"
- dlh_grand_trunk_road.tooltip:0 "ラホール、シルヒンド、上ドアーブ、下ドアーブ、プルヴァンチャル、ビハール、ガウル、東ベンガル地域の領有州はすべて、ゲーム終了まで§Y大幹道§!を獲得し、以下の効果を得ます：\n友軍移動速度§G+25%§!"
+ dlh_grand_trunk_road.tooltip:0 "ラホール、シルヒンド、上ドアーブ、下ドアーブ、プルヴァンチャル、ビハール、ガウル、東ベンガル地域の領有州はすべて、ゲーム終了まで§Y大幹道§!を獲得し、以下の効果を得ます：\n友軍移動速度 §G+25%§!"
  dlh_conquer_orissa_title:0 "オリッサの征服"
  dlh_conquer_orissa_desc:0 "ジャガンナートの従者たる信仰者たちは、ガルジャートの密林が彼らを我々の支配から保護してくれると信じて逃げた。彼らに我々の猛攻はいかなる障害も凌ぐということを見せつけてやれ！"
  ori_vassals_mission_title:0 "ガルジャートを支配せよ"
@@ -1009,7 +1009,7 @@
  bng_conquer_koch_desc:0 "ベンガルが強力なインド王国に囲まれて本当に生き残りたいなら、拡大せねばならない。我々の北にある小さなコーチ王国は他のどの国家よりも征服するのにふさわしい。"
  bng_garjat_fealty_title:0 "ガルジャートの忠誠の要求"
  bng_garjat_fealty_desc:0 "ガルジャート部族は歴史的に隣接海岸を支配するどの大国にも忠誠を誓ってきた。この土地が我々のものである際は、当然ガルジャートの同様の忠誠を要求すべきことになる。"
- bng_burma.tooltip:0 "ビルマ地域の領有州はすべて、§Yビルマでのベンガル支配§!を獲得し、以下の効果を得ます：\n月毎の自治率の変動：§G-0.05§!"
+ bng_burma.tooltip:0 "ビルマ地方の領有州はすべて、§Yビルマでのベンガル支配§!を獲得し、以下の効果を得ます：\n 月間自治率変動：§G-0.05§!"
  mlw_rewakantha_title:0 "リーワーカンタ征服"
  mlw_rewakantha_desc:0 "チャンパーネールの城塞都市は沿岸のライバルの領域、グジャラートの玄関口である。西方への拡大の下準備をするため、自力で城塞を占領せねばならない。"
  mlw_conquer_gujarat_title:0 "グジャラート侵攻"
@@ -1140,7 +1140,7 @@
  guj_shipyards_of_gujarat_desc:0 "造船に関して長く誇り高い伝統を持つが、時間と共に西洋のいくつかの設計技法の革新に一致していない事が明らかとなってきた。造船業に投資をし、祖先の良い職人技術と資材を保つと同時に、これら西洋の良い部分を模倣して艦船を作ろう。"
  guj_gujarati_diaspora_title:0 "グジャラート人のディアスポラ"
  guj_gujarati_diaspora_desc:0 "グジャラート商人はインド洋周辺、特に東アフリカの多くの港でよく見かける。これらいくつかの港に直接的影響を与える事により、我が支配下にある海軍基地の網を構築する時だ。"
- guj_gujarati_diaspora_tooltip:1 "[Root.GetName]が東アフリカ地域またはアフリカの角地域の州を10州領有する。"
+ guj_gujarati_diaspora_tooltip:1 "[Root.GetName]が東アフリカまたはアフリカの角地方の州を10州領有する。"
  guj_south_africa_title:0 "南アフリカの拠点"
  guj_south_africa_desc:0 "インド洋に西洋の貿易商人が参入して以来、大量の銀が亜大陸に流入し始めている。これは良いことであるが一方で、この資金が流入する所に対し、支配する方法がほぼない事は厄介である。西洋との直通の貿易を開くことができるように、そして我が海域での彼らの活発な活動をより効果的に監視できるように、自分達の西の拠点を設立せねばならない。"
  guj_saurashtra:0 "サウラーシュトラの要塞化"
@@ -1424,9 +1424,9 @@
  mission_conquer_persia_tatars_desc:0 "我々の偉大な祖先はずっと以前に行ったように、ペルシアを征服する時が来た。しかし、戦いが勝利した際、誰がペルシアを支配するのだろうか？"
  mission_secure_the_silk_road_title:0 "シルクロードの確保"
  mission_secure_the_silk_road_desc:0 "シルクロードの富は現在大部分が我々の国境地帯内にある貿易路を流れる。これらの経路が繁栄し続けるよう努めねばならない。"
- tatar_silk_road_tooltip:0 "§Yペルシア§!地方または§Y中央アジア§!地方または§Yホラーサーン§!地方にレベル3の交易中心地のある州を少なくとも§Y1§!州自国で領有する"
- tatar_silk_road_tooltip_2:0 "§Yペルシア§!地方または§Y中央アジア§!地方または§Yホラーサーン§!地方にレベル2の交易中心地のある州を少なくとも§Y6§!州自国で領有する"
- tatar_silk_road_tooltip_3:0 "§Yペルシア§!もしくは§Y中央アジア§!もしくは§Yホラーサーン§!地域で、§Y市場§!または§Y交易倉庫§!または§Y証券取引所§!のある州を少なくとも§Y8§!州領有する"
+ tatar_silk_road_tooltip:0 "§Yペルシア§!もしくは§Y中央アジア§!、§Yホラーサーン§!地方にレベル3の交易中心地のある州を少なくとも§Y1§!州領有する。"
+ tatar_silk_road_tooltip_2:0 "§Yペルシア§!もしくは§Y中央アジア§!、§Yホラーサーン§!地方にレベル2の交易中心地のある州を少なくとも§Y6§!州領有する。"
+ tatar_silk_road_tooltip_3:0 "§Yペルシア§!もしくは§Y中央アジア§!、§Yホラーサーン§!地域で、§Y市場§!または§Y交易倉庫§!、§Y証券取引所§!のある州を少なくとも§Y8§!州領有する。"
  mission_conquer_kazakhstan_title:0 "カザフの平定"
  mission_conquer_kazakhstan_desc:0 "さらにずっとステップに入り込まねばならない。東方へと行進する際は、カザフは我がオルドに参加させねばならない。"
  mission_conquer_samarkand_title:0 "サマルカンドの請求"
@@ -1459,15 +1459,15 @@
  lit_conquer_muscovy_title:0 "モスクワとの同君連合"
  lit_conquer_muscovy_desc:0 "彼らの力を抑止する強いノヴゴロドがいてさえも、モスクワは承服できない脅威のままだ。リトアニアの王を彼らの王位へとおかねばならない、あるいは、モスクワを攻撃せねばならない。"
  develop_ukraine_tooltip:0 "以下のいずれか1つを満たす§Yルテニア§!地方に所属する州の内、§Y10§!州を領有する。\n開発度が§Y10§!以上ある\n§Y寺院§!がある\n§Y大聖堂§!がある"
- develop_ukraine_effect_tooltip:0 "§Yルテニア§!地域の領有州はすべて、ゲーム終了まで§Y「ルテニアの復興」§!を獲得し、以下の効果を得ます：\n州内開発コスト：§G-5%§!\n州内不穏度：§G-2§!"
- develop_ukraine_effect_tooltip_2:1 "§Yルテニア§!地域の領有州はすべて、ゲーム終了まで§Y「ルテニアの復興」§!を獲得し、以下の効果を得ます：\n税収：毎年§G＋0.50§!\n州内不穏度：§G-2§!"
+ develop_ukraine_effect_tooltip:0 "§Yルテニア§!地方の全領有州は、ゲーム終了まで§Y「ルテニアの復興」§!を獲得し、以下の効果を得ます：\n州の開発コスト：§G-5%§!\n州の不穏度：§G-2§!"
+ develop_ukraine_effect_tooltip_2:1 "§Yルテニア§!地方の全領有州は、ゲーム終了まで§Y「ルテニアの復興」§!を獲得し、以下の効果を得ます：\n税収：毎年§G＋0.50§!\n州の不穏度：§G-2§!"
  plc_election_mission_tooltip:0 "ポーランドで新しい統治者が選出されました。"
  prussian_confederation_mission_pol_title:0 "プロシア連合"
  prussian_confederation_mission_pol_desc:0 "西プロイセンの人々はチュートン騎士団の支配から解放される事を叫ぶ。自由を得るために戦う彼らの支援を行わねばならない。"
  support_confederation_tooltip:0 "プロシア連合の支援"
  vassalize_danzig_tooltip:0 "ダンツィヒは我々の従属国になるでしょう"
  vij_zanzibar_tooltip:0 "5州領有せよ：\n§Y東アフリカ§!地方に所属する。\n§Y交易拠点§!がある。\n交易会社によって領有されている。"
- vij_zanzibar_tooltip_2:0 "§Y東アフリカ§!地方に所属する州において、その地域内で交易会社投資である§Y交易会社倉庫§!もしくは§Y交易会社大倉庫§!が建造されている州を領有する"
+ vij_zanzibar_tooltip_2:0 "§Y東アフリカ§!地方の領有州において、その地域内に§Y交易会社倉庫§!もしくは§Y交易会社大倉庫§!の交易会社投資がある。"
  vassalize_the_teutonic_order_desc:1 "チュートン騎士団は当初、ポーランド王国の要請でプロイセンに招かれた。それ以来、彼らは問題へと変わった。騎士団は、これらの土地がポーランドの合法的な一部であることを認識しなければならない。"
  tr_dniepr_desc:1 "何世紀も昔、モンゴルのくびきの前、ドニプエルの肥沃な土地はルーシの領土の一部だった。再びそうなるだろう。"
  gc_cas_spa_plus_ultra_title:0 "プルス・ウルトラ"
@@ -1505,7 +1505,7 @@
  cas_spa_havana.tooltip:0 "§Y[Root.GetName]§!あるいは彼らの従属国が、§Y東キューバ§!あるいは§Y西キューバ§!地域に、完全に植民地化された州を§Y5§!州以上領有する。"
  gc_cas_spa_mayans_title:0 "マヤの征服"
  gc_cas_spa_mayans_desc:0 "我々がユカタンへ派遣した探検家達は、神秘的な滅びた文明の話を持ち帰る。かつて半島全体を支配した大同盟のマヤ人は、反目する都市国家群となっており、スペインの征服の機が熟している。"
- spa_mayan_conquest_tooltip:0 "§Y[Root.GetName]§!あるいは彼らの従属国が、§Y中央アメリカ§!地域において、完全に植民地化された州を全て領有する。"
+ spa_mayan_conquest_tooltip:0 "§Y[Root.GetName]§!またはその従属国が、§Y中央アメリカ§!地方の植民地化された州をすべて領有する。"
  gc_cas_spa_navarra_title:0 "ナバラの属国化"
  gc_cas_spa_navarra_desc:0 "ナバラ王国を統治するトラスタマラ家の分家は、弱さと内戦の兆候を見せ始めた。パンプローナをしっかりと我が支配下にすることで、彼らの紛争を解決せねばならない。"
  gc_cas_spa_expel_moriscos_title:0 "モリスコの追放"
@@ -1517,8 +1517,8 @@
  gc_cas_spa_new_spain_desc:0 "恒久的かつ組織的な植民地の副王位を設立することによって、メキシコ湾にまで我が支配を真に合併する時が来た。アウディエンシアは新世界での最高裁判所となり、メキシコの金持ちがスペインまで安全に進めるよう保証する。"
  gc_cas_spa_florida_title:0 "フロリダの要塞化"
  gc_cas_spa_florida_desc:0 "ヌエバ・エスパーニャの北にあるフロリダの湿地帯は金が豊富でないが、将来の植民地の秩序を守る上で不可欠なものだ。その地域へ移住し、要塞化せねばならない。"
- fortified_florida_tooltip:0 "§Yサウスイースト§!もしくは§Y西フロリダ§!地域にて、§Y[Root.GetName]§!またはその従属国が領有し、要塞レベルが§Y3§!以上の全州に§Y20§!年間§Y要塞化されたフロリダ§!を獲得し、以下の効果を得ます：\n州防衛§G＋20%§!"
- cas_spa_florida_forts.tooltip:0 "自国か従属国が§Yサウスイースト§!あるいは§Y西フロリダ§!地域において、§Y3§!レベル以上の要塞がある州を§Y3§!州以上領有する。"
+ fortified_florida_tooltip:0 "§Yサウスイースト§!もしくは§Y西フロリダ§!地方にて、§Y[Root.GetName]§!またはその従属国が領有し、要塞レベルが§Y3§!以上の州はすべて、§Y要塞化されたフロリダ§!を§Y20§!年間獲得し、以下の効果を得ます：\n州防衛 §G＋20%§!"
+ cas_spa_florida_forts.tooltip:0 "自国か従属国が§Yサウスイースト§!地方あるいは§Y西フロリダ§!地域において、§Y3§!レベル以上の要塞がある州を§Y3§!州以上領有する。"
  gc_cas_spa_california_title:0 "カリフォルニアの植民地化"
  gc_cas_spa_california_desc:0 "カリフォルニアへの進出拡大は、ヌエバ・エスパーニャの国境を自然と伸ばすこととなる。根も葉もないが、この地域には前人未踏の金鉱床があると噂されており、もし本当に存在すれば、確保せねばならない地域である。"
  miss_colonize_california:0 "§Y[Root.GetName]§!あるいは彼らの従属国が、§Yカリフォルニア§!植民地域に、完全に植民地化された州を§Y5§!州以上領有する"
@@ -1705,7 +1705,7 @@
  gc_por_japanese_trade_desc:0 "すべての見知らぬ人が不審に思えるが、日本の封建的支配者は、どんな商人にも交易の権利や日本の港への上陸さえも中々許してくれない。彼らの疑念を克服する方法を見つけ、この独占的な市場の足場を持つ唯一のヨーロッパ勢力とならなければならない。"
  gc_por_triangle_trade_title:0 "三角貿易"
  gc_por_triangle_trade_desc:0 "アフリカの奴隷は、新世界の大農園で働くために送られる。この奴隷労働の製品は、その後ヨーロッパに送り返され、法外な利益率で売却される。これが大西洋の三角貿易であり、我々はこれを支配しなければならない。"
- por_triangle_trade_mission_tooltip:0 "§Y奴隷§!を産出する§Yアフリカ§!大陸の領有州はすべて、§Y20§!年間「§Y三角貿易§!」を獲得し、以下の効果を得ます：\n交易品生産：§G+10%§!"
+ por_triangle_trade_mission_tooltip:0 "§Y奴隷§!を産出する§Yアフリカ§!大陸の領有州はすべて、「§Y三角貿易§!」を§Y20年§!間獲得し、以下の効果を得ます：\n交易品生産：§G+10%§!"
  por_indian_investment_tooltip:1 " §Yインド§!亜大陸で領有するステートに、交易会社投資が1以上ある"
  gc_portugal_discovers_india_title:0 "インドへ前進"
  gc_portugal_discovers_india_desc:0 "我々はプレスター・ジョンの王国の兆候を見つけられていないが、香辛料貿易を手にしてムーア人に打撃を与えることができる。我々は、我々がキリスト教世界を守るために少しでも何かできるように、インドを発見する必要がある。"
@@ -1738,7 +1738,7 @@
  gc_ara_alexandria_desc:0 "かつてアレクサンドリアは大都市だったが、衰退していった。我が支配を東方へと広げたなら、エジプトの富が都市へと流れ込むよう、アレクサンドリアを奪取し、復元せねばならない。"
  gc_ara_envoy_to_ethiopia_title:0 "エチオピアへの使節"
  gc_ara_envoy_to_ethiopia_desc:0 "ついにプレスター・ジョンの伝説の王国を見つけた！我々が発見したのと同様に、アビシニアの土地には、近くにいる敵に対して支援を受けたいと望む多くの忠実なキリスト教徒が住んでいる。離れた信仰上の兄弟たちを保護し励まさねばならない。"
- ara_ethiopia_tooltip:1 "総開発度が§Y70§!以上で§Yアフリカの角§!地域に首都を持ついずれかの§Yキリスト教§!国家が、我々に対して§Y100§!以上の評価を持つ"
+ ara_ethiopia_tooltip:1 "総開発度が§Y70§!以上で§Yアフリカの角§!地方に首都を持ついずれかの§Yキリスト教§!国家が、我々に対して§Y100§!以上の評価を持つ"
  gc_ara_provence_title:0 "プロヴァンスに屈辱を与える"
  gc_ara_provence_desc:0 "プロヴァンス公は、アラゴンとナポリの双方の正当な支配者であると主張しています。彼の主張は罰しないでおくべきではない。"
  gc_ara_occitania_title:0 "オクシタニアへの侵略"
