--- a/source/localisation/res_publica_l_english.yml
+++ b/source/localisation/res_publica_l_english.yml
@@ -20,7 +20,7 @@
  desc_orangists_rally_against_rival:0 "オラニエ公は、憎むべきライバルとの戦いで指導力を発揮し、この崇高な主張の背後で貴族たちを結集させた。"
  local_regenten_upset:0 "地方執政官の混乱"
  desc_local_regenten_upset:0 "オラニエ派と君主派の利権による地方対立は上流階級に失望を引き起こした。"
- local_nobles_upset:0 "地方貴族の混乱"
+ local_nobles_upset:0 "在地貴族の混乱"
  desc_local_nobles_upset:0 "オラニエ派と君主派の利権による地方対立は貴族たちに失望を引き起こした。"
  dutch_republic.1.t:0 "全権"
  dutch_republic.1.d:0 "一つにはこれが前例のないものであり、圧政に苦しむ他国と対象的であるという理由で、我々は[Root.GovernmentName]を誇りに思っている。しかし、貴族の数が増えれば、一人の支配者が制限のない権力を行使して近隣諸国間で流行している専制政治への国際的な傾向が指摘されている。\n\n[Root.Monarch.GetName]、彼らは、偉大な支配者としてのあらゆる才能を持っていると主張する。[Root.Monarch.GetTitle]により権力を与えることで、国家を強化し、我々はそれらの考えを承認することを他の支配者に示すことができる。"
@@ -111,7 +111,7 @@
  influential_guild_members:0 "影響力あるギルトの会員"
  desc_influential_guild_members:0 "地元のギルドの指導者は、貴族に取って代われるほど十分強力な存在へと成長してきた。"
  influential_nobles:0 "影響力ある貴族"
- desc_influential_nobles:0 "地元の貴族は遺産と伝統によって自分の影響力を保持している。"
+ desc_influential_nobles:0 "在地貴族は遺産と伝統によって自分の影響力を保持している。"
  foreign_guild_infiltrated:0 "外国のギルドへの潜入"
  desc_foreign_guild_infiltrated:0 "我々のギルドのメンバーは外国の相手にうまく潜入した。"
  guilds_compromised:0 "ギルドは傷つけられた"
