--- a/source/localisation/dharma_l_english.yml
+++ b/source/localisation/dharma_l_english.yml
@@ -47,11 +47,11 @@
  DEMAND_SUPPORT_RAJPUTS:0 "軍事支援を要求"
  PROMOTE_RAJPUT_NOBILITY:0 "ラージプート貴族の昇格"
  EST_VAL_PROMOTED_RAJPUTS:0 "ラージプート貴族の登用: §Y$VAL$%§!"
- maratha_tax_burden_autonomy_tooltip:1 "§Yマラーター§!の支配下にあるすべての州は§R15%§!の自治率と§G25%§!の州人的資源が増加されます。"
+ maratha_tax_burden_autonomy_tooltip:1 "§Yマラーター§!の支配下にある州はすべて、自治率が§R15%§!、州人的資源が§G25%§!増加します。"
  EST_VAL_FEUDALISM:0 "封建貴族: §Y$VAL$%§!"
  PROMOTE_MARATHA_NOBILITY:0 "マラーター貴族の昇格"
  EST_VAL_PROMOTED_MARATHAS:0 "マラーター貴族の登用: §Y$VAL$%§!"
- rajput_tax_burden_autonomy_tooltip:0 "§Yラージプート§!が支配するすべての州は§R15%§!の自治率を増加されます"
+ rajput_tax_burden_autonomy_tooltip:0 "§Yラージプート§!が支配する州はすべて、自治率が§R15%§!増加します"
  look_up_purbias:0 "プルビア"
  desc_look_up_purbias:0 "有能なラージプート戦士を雇用するとの我々の発表により、精鋭戦士が我々の旗のもとに集結している。"
  RECRUIT_RAJPUT_GENERAL:0 "ラージプートの将軍を雇用"
@@ -148,7 +148,7 @@
  brahmins_estate_events.9.d:0 "バラモンは伝統的にヒンドゥー教の宗教上の権威を独占してきたが、時折、バラモン主義に挑む宗教運動が現れる。この種の運動が、バラモンによる抑圧の努力にもかかわらず、[Root.Country.GetName]中に広まっている。大衆宗教運動の主唱者達は、バラモンは自分の額から聖痕を拭い去って宗教的責任を逃れてきた、それは世俗権力の座を占領し、貧民に不公平を押し付けるためだと主張している。無欲の献身だけが救いへの唯一の道であり、十分に熱心なヒンドゥー教徒ならば誰でも達成できる美徳であると彼らは断言している。\n\n影響力のあるバラモンの集団は、バラモンの権威に対する国民の信頼を回復し、非バラモン宗教運動を抑圧する助けを嘆願するため、[Root.Monarch.GetTitle]に接近している。"
  brahmins_estate_events.9.a:0 "バラモンに正統性の強制を許可する。"
  brahmins_estate_events.9.b:0 "大衆宗教運動を推奨する。"
- non_brahmin_tooltip:1 "§Yバラモン§!階級の土地占有率とほぼ等しい§Yヒンドゥー教§!の領有州の一部は、§Y15年§!間§Y「バラモンの正統性の強制」§!を獲得し、以下の効果を得ます：\n州不穏度：§R+5.00§!\n月自治率変化：§G-0.05%§!"
+ non_brahmin_tooltip:1 "§Yバラモン§!階級の土地占有率とほぼ等しい§Yヒンドゥー教§!の領有州の一部は、§Y「バラモンの正統性の強制」§!を§Y15年§!間獲得し、以下の効果を得ます：\n州の不穏度：§R+5.00§!\n月間自治率変動：§G-0.05%§!"
  brahmins_estate_events.10.t:0 "[brahmin_fort_province.GetName]の要塞で紛争"
  brahmins_estate_events.10.d:0 "[Root.Country.GetName]の王室は、[Root.Monarch.GetTitle]と軍事階級間の紛争に巻き込まれました。緊張が高まっている今、要塞管理の問題が注目されるようになりました。現在、特に争いを好む将軍によって保有される[brahmin_fort_province.GetName]の要塞は、バラモンが自らの影響力を得ている州にあります。\n\n緊張のために突然戦争が勃発する可能性を予見して、この重要な要塞の支配権を争いを好む将軍からバラモンに移すことは賢明かもしれません。攻城技術に関しては軍人より下手ですが、少なくともバラモンは[Root.Monarch.GetTitle]に忠実です。また代案としては、[brahmin_fort_province.GetName]での将軍の特権の保持と引き換えに態度を変えるよう彼を説得することができます。"
  brahmins_estate_events.10.a:0 "バラモンに要塞を渡せ。"
@@ -358,7 +358,7 @@
  marathas_estate_events.8.d:0 "ビトーバー崇拝を中心とする巡礼の伝統は、マラーターの間で人気が高まっています。これらの行列は、インドの多くのマラーター居留地で幅広く同時に行われ、パンダルプールのビトーバーの寺院で最高潮に至る、パルキーとして知られています。パルキーはマラーターの平等主義の伝統の一部を形成しています。階級にかかわらず全てのマラーターは、崇拝されたサント・マット、詩人の聖人の質素なサンダルを持って、並んで歩きます。\n\nバラモンの中には、これらの非階層的な宗教運動が宗教的権威に対する脅威であると見なす者もます。彼らはヴェーダの儀式の解釈に従って正統なヒンドゥー教の礼拝に統合できるように、パルキーを管理する手段を得ようとしています。"
  marathas_estate_events.8.a:0 "パルキーは民衆の手中にあるままとしよう。"
  marathas_estate_events.8.b:0 "バラモンの指針で祭典を正式なものとせよ。"
- palkis.tooltip:1 "§Yマラーター§!階級の土地占有率とほぼ等しい§Yヒンドゥー教§!の領有州の一部は、§Y20年§!間§Y「大衆のパルキー」§!を獲得し、以下の効果を得ます：\n州不穏度：§G-3.00§!\n州開発コスト：§G-5.0%§!\n月間荒廃度：§G-0.03§!"
+ palkis.tooltip:1 "§Yマラーター§!階級の土地占有率とほぼ等しい§Yヒンドゥー教§!の領有州の一部は、§Y「大衆のパルキー」§!を§Y20年§!間獲得し、以下の効果を得ます：\n州の不穏度：§G-3.00§!\n州の開発コスト：§G-5.0%§!\n月間荒廃度：§G-0.03§!"
  EST_VAL_BRAHMIN_PALKHIS:0 "バラモン主導のパルキー: §Y$VAL$%§!"
  marathas_estate_events.9.t:0 "マラーターの権力の減少"
  marathas_estate_events.9.d:0 "最近、[Root.Country.GetName]内でのマラーターの影響は薄れています。王朝の内紛と分裂は、多くのマラーターの指導者から[Root.Monarch.GetTitle]に対する義務を遠ざけ、従って、彼らは王室でほとんど権力を振るっていません。"
@@ -386,7 +386,7 @@
  DESELECT_SUPPRESSION_AREA:0 "§G$AREA|Y$を鎮圧地域から削除します。§!\n"
  CANCEL_REBEL_SUPPRESSION:0 "§Y自動的な反乱軍鎮圧を中止§!"
  NO_OWNED_PROVS_IN_AREA:0 "§R自国も有効な全ての従属国もどちらも$AREA|Y$地域内の州を領有していません。§!\n"
- UNIT_MUST_BE_IN_OWN_AREA:0 "§R軍隊が自国もしくは有効な従属国の領有州に置かないことには、反乱軍の鎮圧はできません。§!\n"
+ UNIT_MUST_BE_IN_OWN_AREA:0 "§R軍隊を自国もしくは有効な従属国の領有州に置かないことには、反乱軍の鎮圧はできません。§!\n"
  SUPPRESSION_AREA_NOT_ADJACENT:0 "§R鎮圧地域に隣接する地域しか追加できません§!"
  SUPPRESSED_AREAS:0 "鎮圧地域"
  MAX_UNREST:0 "最高の不穏度：$MAX$"
@@ -717,7 +717,7 @@
  investment_events.6.a:0 "[company_missionary_province.GetName]は真の信仰に従わねばならない。"
  investment_events.6.b:0 "寛容は交易会社の運営において必要不可欠だ"
  investment_events.7.t:0 "[company_mint_province.TradeCompany.GetName]硬貨"
- investment_events.7.d:0 "[company_mint_province.GetName]の地元商人は、[company_mint_province.TradeCompany.GetName]に、取引の流れを妨げる硬貨の不足について不満を述べている。当社は[Root.Monarch.GetTitle]から独自の通貨を発行する許可を得て、この州で我々の管理のもと、貨幣鋳造の基礎を確立した。\n\nしかしながら、貨幣鋳造は当然、適切な金属の供給を必要とする。金、銀、銅は、いつでも容易に利用できるものではない。代わりの方法は[appropriated_currency_country.GetName]から硬貨をかき集め、それらに会社の刻印を押し、代替通貨とすることだが、これは[appropriated_currency_country.Monarch.GetHerHis]イメージの破損と見なす[appropriated_currency_country.GetName]の[appropriated_currency_country.Monarch.GetTitle]を怒らせる可能性がある。"
+ investment_events.7.d:0 "[company_mint_province.GetName]の在地商人は、[company_mint_province.TradeCompany.GetName]に、取引の流れを妨げる硬貨の不足について不満を述べている。当社は[Root.Monarch.GetTitle]から独自の通貨を発行する許可を得て、この州で我々の管理のもと、貨幣鋳造の基礎を確立した。\n\nしかしながら、貨幣鋳造は当然、適切な金属の供給を必要とする。金、銀、銅は、いつでも容易に利用できるものではない。代わりの方法は[appropriated_currency_country.GetName]から硬貨をかき集め、それらに会社の刻印を押し、代替通貨とすることだが、これは[appropriated_currency_country.Monarch.GetHerHis]イメージの破損と見なす[appropriated_currency_country.GetName]の[appropriated_currency_country.Monarch.GetTitle]を怒らせる可能性がある。"
  investment_events.7.a:0 "[company_mint_province.GetName]で新硬貨を鋳造せよ。"
  investment_events.7.b:0 "適切な[appropriated_currency_country.GetAdjective]通貨"
  investment_events.8.t:0 "繁栄している[Root.GetAdjective]居留地"
@@ -755,7 +755,7 @@
  monsoon_events.4.a:0 "民より富だ。"
  monsoon_events.5.t:0 "梅雨"
  monsoon_events.5.d:0 "梅の花\n恵みの雨に\n鍬軽し"
- plum_rain_tooltip:0 "§Y[plum_rains_province.GetAreaName]§!地域の§Y穀物§!、§Yワイン§!、§Y茶§!、§Y香辛料§!を生産する州は、§Y5年§!間§Y梅雨§!を獲得し、以下の効果を得ます：\n州生産効率：§G+20.0%§!"
+ plum_rain_tooltip:0 "§Y[plum_rains_province.GetAreaName]§!地域の§Y穀物§!、§Yワイン§!、§Y茶§!、§Y香辛料§!を生産する州は、§Y5年§!間§Y「梅雨」§!を獲得し、以下の効果を得ます：\n州生産効率：§G+20.0%§!"
  HAVE_HAD_REFORM:1 "改革$REFORM|Y$を得ました\n"
  HAVE_HAD_NOT_REFORM:1 "改革$REFORM|Y$を得ませんでした\n"
  mechanic_locked_government_type_yes:0 "政体の変更が禁止されている"
@@ -957,7 +957,7 @@
  DOESNT_HAVE_ANY_TRADE_COMPANY_INVESTMENT:0 "$INVESTOR|Y$は、$AREA|Y$におけるいずれの交易会社も保有していない\n"
  HAS_ANY_TRADE_COMPANY_INVESTMENT:0 "$INVESTOR|Y$は、$AREA|Y$における交易会社を保有している\n"
  dutch_republic.33.d2:1 "[Root.GetAdjectiveCap]州議会内での数年間の内ゲバは、[Root.GetName]の国民精神に否定的影響を与え始めました。州議会に反対する世論の高まりから、市民の間で多くの声援を呼び出しました。\n\nまもなく、一人の候補者が彼の敵対者の中心にそびえ立ち、州議会にまだ残るわずかな敵を打倒し、[Root.GetName]の輝かしい伝統を復活させます。"
- brahmins_estate_events.9.b.tt:2 "§Yバラモン§!階級の土地占有率とほぼ等しい§Yヒンドゥー教§!の領有州の一部は、§Y15年§!間§Y「非バラモン宗教運動」§!を獲得し、以下の効果を得ます：\n州不穏度：§G-5.00§!\n月自治率変化：§R+0.05%§!"
+ brahmins_estate_events.9.b.tt:2 "§Yバラモン§!階級の土地占有率とほぼ等しい§Yヒンドゥー教§!の領有州の一部は、§Y「非バラモン宗教運動」§!を§Y15年§!間獲得し、以下の効果を得ます：\n州の不穏度：§G-5.00§!\n月間自治率変動：§R+0.05%§!"
  GOV_REVOLUTIONARY_REPUBLIC:0 "革命共和国"
  GOVERNMENT_DESELECTED_TITLE:0 "政府の廃止"
  GOVERNMENT_DESELECTED_DESC:1 "あなたの国の変化により、政府$REFORM|Y$は実行不可能になったため廃止されました。政府は$REPLACEMENT|Y$に変更されます。"
