--- a/source/localisation/rule_britannia_l_english.yml
+++ b/source/localisation/rule_britannia_l_english.yml
@@ -439,7 +439,7 @@
  SHARE_OF_STARTING_INCOME_LESS:0 "最大§Y$TARGET$§!¤の収入（現在 §Y$CURRENT$§!¤）"
  SHARE_OF_STARTING_INCOME_MORE:0 "少なくとも§Y$TARGET$§!¤の収入（現在 §Y$CURRENT$§!¤）"
  INNOVATIVENESS_AMOUNT:0 "我々は現在$AMOUNT|Y$の革新性を達成しています。"
- INNOVATIVENESS_CHANGE_DESC:0 "我々の革新性は以下によって補正されています：\n"
+ INNOVATIVENESS_CHANGE_DESC:0 "我々の革新性の補正は以下の通り：\n"
  INNOVATIVENESS_FULL_MOD_DESC:0 "\n§Y100§!の革新性の効果：\n$MOD$"
  INNOVATIVENESS_DESC:2 "革新性は以下により増加します：\n最初の技術：$FIRSTINTECH|G$\n最初のアイデア：$FIRSTINIDEA|G$\n時代の先行：$AHEADOFTIME|G$/月\n\n革新性は以下により減少します：\n隣国からの遅れ：$BEHINDNEIGHBOURS|R$/月\n"
  INNOVATIVENESS_MOD_DESC:0 "\n現在の革新性の効果：\n$MOD$"
